# local-llm

./: .gitignore  Makefile  README.md  pyproject.toml
config/: general.yaml  model.yaml  obsidian.yaml
src/local_llm/: api.py  archive.py  assistants.py  cli.py  client.py  config.py  history.py  obsidian.py  prompt.py
src/local_llm/web/: app.js  index.html  styles.css
tests/: test_api_per_message_meta.py  test_archive_assistant_ref.py  test_archive_files.py  test_archive_metadata.py  test_archive_overwrite.py  test_archive_per_message.py  test_archive_rename.py  test_archive_validation.py  test_assistant_api.py  test_assistant_greetings.py  test_assistant_migration.py  test_assistant_version_history.py  test_assistant_versioning.py  test_assistants.py  test_autosave.py  test_compaction.py  test_greeting_api.py  test_greeting_generation.py  test_greeting_persistence.py  test_greeting_regeneration.py  test_history.py  test_history_assistant_meta.py  test_obsidian.py  test_prompt_wrapper.py  test_real_ollama.py  test_resume_session.py
tests/e2e/: conftest.py  test_archive_duplicate.py  test_archive_no_duplicate.py  test_chat.py  test_commands.py  test_compaction_ui.py  test_context_bar.py  test_context_modal.py  test_favicon.py  test_greeting.py  test_header_assistant.py  test_input_limit.py  test_modal_dismiss.py  test_model_select.py  test_no_banner.py  test_prompt_wrapper_e2e.py  test_real_greeting.py  test_real_streaming.py  test_resume_archive.py  test_session_creation.py  test_sidebar_highlight.py  test_slash_popup.py  test_wizard_nav.py  test_wizard_sliders.py
